# sea2

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  ruff.toml
comparison-blind/: README.md  m11-m12.template.json  scorecard.md  sea-final.md  sea-m1-retrofit.json  sea-scores.json  sea2-final-preliminary.md  sea2-final.md  sea2-findings-sample.csv  sea2-scores.json
docs/: anti-patterns.md  article-alignment-audit.md  comparison-domain-keywords.json  comparison-protocol.md  sea-postmortem.md
scripts/: append_questions.py  blind_compare.py  build_comparison_report.py  download_corpus.py  record_m11_m12.py  rescore_quotes.py  retrofit_sea_m1.py  seed_au_token_questions.py  smoke_run.py
seed-prompts/: README.md  data-hunt-ai-content-policy-and-developer-platform-trust-specialist-d03.md  data-hunt-api-rate-limit-empirical-prober-runs-curl-against-hosted-llm-endpoints-interpret-13dd3cbc-d06.md  data-hunt-b2b-saas-paid-social-strategist-with-linkedin-ads-budget-optimization-experience-d09.md  data-hunt-bfcl-benchmark-data-analyst-agentic-tool-use-eval--d26.md  data-hunt-bfcl-v4-benchmark-analyst-with-tool-calling-quantization-sensitivity-focus-d30.md  data-hunt-calcium-carbide-residue-binder-formulation-chemist-d09.md  data-hunt-canonical-greater-than-claim-mapper-d08.md  data-hunt-cross-domain-ai-content-perception-researcher-d13.md  data-hunt-developer-content-marketing-analyst-with-x-twitter-platform-expertise-d03.md  data-hunt-developer-marketing-analyst-with-devrel-and-content-distribution-expertise-d10.md  data-hunt-developer-marketing-operations-analyst-someone-who-has-studied-or-lived-the-solo-small-team-developer-d04.md  data-hunt-developer-onboarding-api-signup-flow-auditor-specializes-in-enumerating-credit-c-bf6c66f5-d02.md  data-hunt-linkedin-carousel-content-strategist-d02.md  (+317 more)
tests/: test_caps.py  (+27 more)
(+37 files in other folders)
