[project]
name = "sea2"
version = "0.1.0"
description = "Retrieval-first agentic research with full reliability stack."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "filelock>=3.13,<4",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sea2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/sea2"]
